--- a/src/html/schedule.html
+++ b/src/html/schedule.html
@@ -15,6 +15,7 @@
     <div class="fixed-header">
       <h1 class="current-month"></h1>
       <div class="calendar" id="calendar-header"></div>
+      <button id="add-event-btn"><i class="bx bx-plus"></i></button>
       <button id="theme-toggle">
         <i class="bx bx-sun"></i>
       </button>
@@ -22,7 +23,6 @@
     <div class="calendar-container">
       <div class="calendar" id="calendar-body"></div>
     </div>
-
     <script type="module" src="/src/js/schedule.js"></script>
   </body>
 </html>
