--- a/src/html/arabic.html
+++ b/src/html/arabic.html
@@ -6,6 +6,7 @@
     <title>مسرحية صيف ٨٤٠</title>
     <link rel="stylesheet" href="/src/css/arabic.css" />
     <link rel="stylesheet" href="/src/css/music_player.css" />
+    <link rel="stylesheet" href="/src/css/header.css" />
     <link
       rel="shortcut icon"
       href="/public/arabic_favicon.png"
@@ -20,168 +21,216 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
   </head>
-  <body>
-    <header>
-      <h1>مسرحية صيف ٨٤٠</h1>
-      <img src="/public/images/saf_840_cover_page.jpeg" alt="" />
-    </header>
-    <main>
-      <section>
-        <h2>نبذة عن المسرحية</h2>
-        <p>
-          مسرحية "صيف ٨٤٠" هي عمل درامي من تأليف منصور الرحباني، تدور أحداثها في
-          7 حزيران (يونيو) 1840 في دير بأنطلياس. تروي قصة اجتماع رجال دين وزعماء
-          طوائف جبل لبنان، حيث يقسمون على التوحد ضد المحتل الأجنبي. المسرحية
-          تجمع بين الغناء والاستعراض في إطار قروي، مع حوارات بسيطة وعناصر إبهار
-          من ديكورات ضخمة وأزياء أنيقة.
-        </p>
-      </section>
-
-      <section class="character_container">
-        <h2>الشخصيات الرئيسية</h2>
-        <div
-          class="slider"
-          style="--quantity: 5; --width: 20vw; --height: 25vh"
-        >
-          <div class="list">
-            <figure class="item" style="--position: 5">
-              <h3>منصور الرحباني (مؤلف و ملحن )</h3>
-              <img src="/public/images/rehbani.jpeg" alt="منصور الرحباني" />
-            </figure>
-            <figure class="item" style="--position: 4">
-              <h3>غسان صليبا (سيف البحر)</h3>
-              <img src="/public/images/8asan_saliba.jpeg" alt="غسان صليبا" />
-            </figure>
-            <figure class="item" style="--position: 3">
-              <h3>هدى حداد (ميرا)</h3>
-              <img src="/public/images/huda.jpeg" alt="هدى حداد" />
-            </figure>
-            <figure class="item" style="--position: 2">
-              <h3>أنطوان كرباج (اليوزباشي)</h3>
-              <img src="/public/images/antoine.jpeg" alt="أنطوان كرباج" />
-            </figure>
-            <figure class="item" style="--position: 1">
-              <h3>سيمون عبيد (البكباشي)</h3>
-              <img src="/public/images/simoine.jpeg" alt="سيمون عبيد" />
-            </figure>
-          </div>
+  <body style="overflow-x: hidden">
+    <div class="header">
+      <nav>
+        <div class="logo">
+          <a href="./index.html">
+            <img src="/public/favicon.png" alt="الشعار" />
+          </a>
         </div>
-      </section>
-
-      <section>
-        <h2>قصة المسرحية</h2>
-        <p></p>
-        <p>
-          تروي مسرحية صيف ٨٤٠ قصة عامية، ٢٧، أنطلياس حين اتفق زعماؤها المنتمون
-          إلى مختلف الطوائف اللبنانية وأقسموا اليمين في السابع من حزيران عام
-          ١٨٤٠، أمام مذبح القديس الياس في كنيسة مار الياس في أنطلياس، على الثورة
-          ضد الأمير بشير الثاني، الذي كان يتعامل مع المصريين والفرنسيين، واتفقوا
-          على الدفاع عن الأرض وسيادتها.
-        </p>
-        <p>
-          تقع ميرا ابنة اليونياتي عساف الضاهر في حب سيف البحر أحد ثوار العامية
-          منذ اللقاء الأول. لكن والدها -وهو محارب الثوار- يرغمها على الزواج من
-          البكباشي مختار وهو ضابط كبير في الجيش المصري. لكن خلال حفل الخطوبة،
-          يأتي سيف البحر متخفيًا ويغني ثم يخطف ميرا ويهرب.
-        </p>
-        <p>
-          فيما هي متخفية معه، لا تبرح ميرا تسأل سيف البحر متى يتزوجها. لكنه، في
-          كل مرة، يعدها بالزواج بعد انتصار الثورة إذ يريد أن يزفها بالنصر. ويظل
-          الثوار يحاربون حتى يتم خلع الأمير بشير الثاني وتعيين حاكم جديد هو
-          الأمير بشير قاسم ملحم
-        </p>
-        <p>
-          أما سيف البحر فلم يكتف بهذا النصر إذ الحاكم الجديد عُيِّن من الخارج.
-          فهو يريد تحرير كل أرض الوطن حتى من العثمانيين الذين يحكمونه منذ
-          أربعمئة سنة. وحين ترفض ميرا وباقي الثوار الانضمام إليه للقتال، يحمل
-          سيف البحر علم الثورة ويقول إنه سيحارب وحده. لكن سرعان ما يسقط أرضا بعد
-          أن يرميه العريس، مرافق البكباشي مختار، برصاصة. بالنتيجة ترفع ميرا علم
-          الثورة وتقرر متابعة الثورة مع باقي الثوار.
-        </p>
-      </section>
-
-      <section>
-        <h2>أغاني المسرحية</h2>
-        <div class="player">
-          <div class="wrapper">
-            <div class="details">
-              <div class="now-playing">PLAYING x OF y</div>
-              <div class="track-art"></div>
-              <div class="track-name">Track Name</div>
-              <div class="track-artist">Track Artist</div>
+        <ul>
+          <li class="dropdown">
+            <a href="#"
+              >التوثيق
+              <i class="bx bx-chevron-down"></i>
+            </a>
+            <div class="dropdown-content show">
+              <a href="./web_history.html">تاريخ الويب</a>
+              <a href="./mobile_web_history.html" style="text-align: center"
+                >تطوير تطبيقات الموبايل</a
+              >
             </div>
-
-            <div class="slider_container">
-              <div class="current-time">00:00</div>
-              <input
-                type="range"
-                min="1"
-                max="100"
-                value="0"
-                class="seek_slider"
-                onchange="seekTo()"
-              />
-              <div class="total-duration">00:00</div>
+          </li>
+          <li class="dropdown">
+            <a href="#">
+              استكشف
+              <i class="bx bx-chevron-down"></i>
+            </a>
+            <div class="dropdown-content show">
+              <a href="./research.html">البحث</a>
+              <a href="./arabic.html" target="_blank" rel="noopener noreferrer"
+                >الصفحة العربية</a
+              >
+              <a href="./schedule.html">التقويم</a>
+              <a href="./portfolio.html">السيرة الذاتية</a>
             </div>
+          </li>
+          <li>
+            <a href="./wordle.html" target="_blank" rel="noopener noreferrer"
+              >وردل</a
+            >
+          </li>
+          <li>
+            <a href="/no_css/" target="_blank" rel="noopener noreferrer"
+              >بدون CSS</a
+            >
+          </li>
+        </ul>
+      </nav>
+    </div>
+    <div class="body">
+      <header>
+        <h1>مسرحية صيف ٨٤٠</h1>
+        <img src="/public/images/saf_840_cover_page.jpeg" alt="" />
+      </header>
+      <main>
+        <section>
+          <h2>نبذة عن المسرحية</h2>
+          <p>
+            مسرحية "صيف ٨٤٠" هي عمل درامي من تأليف منصور الرحباني، تدور أحداثها
+            في 7 حزيران (يونيو) 1840 في دير بأنطلياس. تروي قصة اجتماع رجال دين
+            وزعماء طوائف جبل لبنان، حيث يقسمون على التوحد ضد المحتل الأجنبي.
+            المسرحية تجمع بين الغناء والاستعراض في إطار قروي، مع حوارات بسيطة
+            وعناصر إبهار من ديكورات ضخمة وأزياء أنيقة.
+          </p>
+        </section>
 
-            <div class="slider_container">
-              <i class="fa fa-volume-down"></i>
-              <input
-                type="range"
-                min="1"
-                max="100"
-                value="50"
-                class="volume_slider"
-                onchange="setVolume()"
-              />
-              <i class="fa fa-volume-up"></i>
-            </div>
-
-            <div class="buttons">
-              <div class="random-track" onclick="randomTrack()">
-                <i class="fas fa-random fa-2x" title="random"></i>
-              </div>
-              <div class="prev-track" onclick="prevTrack()" title="previous">
-                <i class="fa fa-step-backward fa-2x"></i>
-              </div>
-              <div class="playpause-track" onclick="playpauseTrack()">
-                <i class="fa fa-play-circle fa-5x" title="play"></i>
-              </div>
-              <div class="next-track" onclick="nextTrack()">
-                <i class="fa fa-step-forward fa-2x" title="next"></i>
-              </div>
-              <div class="repeat-track" onclick="repeatTrack()">
-                <i class="fa fa-repeat fa-2x" title="repeat"></i>
-              </div>
-            </div>
-
-            <div id="wave">
-              <span class="stroke"></span>
-              <span class="stroke"></span>
-              <span class="stroke"></span>
-              <span class="stroke"></span>
-              <span class="stroke"></span>
-              <span class="stroke"></span>
-              <span class="stroke"></span>
+        <section class="character_container">
+          <h2>الشخصيات الرئيسية</h2>
+          <div
+            class="slider"
+            style="--quantity: 5; --width: 20vw; --height: 25vh"
+          >
+            <div class="list">
+              <figure class="item" style="--position: 5">
+                <h3>منصور الرحباني (مؤلف و ملحن )</h3>
+                <img src="/public/images/rehbani.jpeg" alt="منصور الرحباني" />
+              </figure>
+              <figure class="item" style="--position: 4">
+                <h3>غسان صليبا (سيف البحر)</h3>
+                <img src="/public/images/8asan_saliba.jpeg" alt="غسان صليبا" />
+              </figure>
+              <figure class="item" style="--position: 3">
+                <h3>هدى حداد (ميرا)</h3>
+                <img src="/public/images/huda.jpeg" alt="هدى حداد" />
+              </figure>
+              <figure class="item" style="--position: 2">
+                <h3>أنطوان كرباج (اليوزباشي)</h3>
+                <img src="/public/images/antoine.jpeg" alt="أنطوان كرباج" />
+              </figure>
+              <figure class="item" style="--position: 1">
+                <h3>سيمون عبيد (البكباشي)</h3>
+                <img src="/public/images/simoine.jpeg" alt="سيمون عبيد" />
+              </figure>
             </div>
           </div>
-        </div>
-      </section>
-      <section>
-        <h2>إعادة تقديم العمل</h2>
-        <p>
-          بعد مرور 22 عاماً على العرض الأول، قام أبناء منصور الرحباني بإعادة
-          تقديم المسرحية. مروان أخرج العمل، بينما شارك غدي وأسامة في التلحين
-          والتوزيع. تم استخدام تقنيات حديثة في التسجيل، وأسهم الفضاء المفتوح في
-          قلعة بيبلوس في إبراز الطابع التاريخي للعمل. الأزياء من تصميم غابي أبي
-          راشد، والدبكات من تصميم عبد الحليم كركلا.
-        </p>
-      </section>
-    </main>
-    <footer>
-      <p>جميع الحقوق محفوظة © ٢٠٢٤</p>
-    </footer>
-    <!-- </div> -->
+        </section>
+
+        <section>
+          <h2>قصة المسرحية</h2>
+          <p></p>
+          <p>
+            تروي مسرحية صيف ٨٤٠ قصة عامية، ٢٧، أنطلياس حين اتفق زعماؤها المنتمون
+            إلى مختلف الطوائف اللبنانية وأقسموا اليمين في السابع من حزيران عام
+            ١٨٤٠، أمام مذبح القديس الياس في كنيسة مار الياس في أنطلياس، على
+            الثورة ضد الأمير بشير الثاني، الذي كان يتعامل مع المصريين
+            والفرنسيين، واتفقوا على الدفاع عن الأرض وسيادتها.
+          </p>
+          <p>
+            تقع ميرا ابنة اليونياتي عساف الضاهر في حب سيف البحر أحد ثوار العامية
+            منذ اللقاء الأول. لكن والدها -وهو محارب الثوار- يرغمها على الزواج من
+            البكباشي مختار وهو ضابط كبير في الجيش المصري. لكن خلال حفل الخطوبة،
+            يأتي سيف البحر متخفيًا ويغني ثم يخطف ميرا ويهرب.
+          </p>
+          <p>
+            فيما هي متخفية معه، لا تبرح ميرا تسأل سيف البحر متى يتزوجها. لكنه،
+            في كل مرة، يعدها بالزواج بعد انتصار الثورة إذ يريد أن يزفها بالنصر.
+            ويظل الثوار يحاربون حتى يتم خلع الأمير بشير الثاني وتعيين حاكم جديد
+            هو الأمير بشير قاسم ملحم
+          </p>
+          <p>
+            أما سيف البحر فلم يكتف بهذا النصر إذ الحاكم الجديد عُيِّن من الخارج.
+            فهو يريد تحرير كل أرض الوطن حتى من العثمانيين الذين يحكمونه منذ
+            أربعمئة سنة. وحين ترفض ميرا وباقي الثوار الانضمام إليه للقتال، يحمل
+            سيف البحر علم الثورة ويقول إنه سيحارب وحده. لكن سرعان ما يسقط أرضا
+            بعد أن يرميه العريس، مرافق البكباشي مختار، برصاصة. بالنتيجة ترفع
+            ميرا علم الثورة وتقرر متابعة الثورة مع باقي الثوار.
+          </p>
+        </section>
+
+        <section>
+          <h2>أغاني المسرحية</h2>
+          <div class="player">
+            <div class="wrapper">
+              <div class="details">
+                <div class="now-playing">PLAYING x OF y</div>
+                <div class="track-art"></div>
+                <div class="track-name">Track Name</div>
+                <div class="track-artist">Track Artist</div>
+              </div>
+
+              <div class="slider_container">
+                <div class="current-time">00:00</div>
+                <input
+                  type="range"
+                  min="1"
+                  max="100"
+                  value="0"
+                  class="seek_slider"
+                  onchange="seekTo()"
+                />
+                <div class="total-duration">00:00</div>
+              </div>
+
+              <div class="slider_container">
+                <i class="fa fa-volume-down"></i>
+                <input
+                  type="range"
+                  min="1"
+                  max="100"
+                  value="50"
+                  class="volume_slider"
+                  onchange="setVolume()"
+                />
+                <i class="fa fa-volume-up"></i>
+              </div>
+
+              <div class="buttons">
+                <div class="random-track" onclick="randomTrack()">
+                  <i class="fas fa-random fa-2x" title="random"></i>
+                </div>
+                <div class="prev-track" onclick="prevTrack()" title="previous">
+                  <i class="fa fa-step-backward fa-2x"></i>
+                </div>
+                <div class="playpause-track" onclick="playpauseTrack()">
+                  <i class="fa fa-play-circle fa-5x" title="play"></i>
+                </div>
+                <div class="next-track" onclick="nextTrack()">
+                  <i class="fa fa-step-forward fa-2x" title="next"></i>
+                </div>
+                <div class="repeat-track" onclick="repeatTrack()">
+                  <i class="fa fa-repeat fa-2x" title="repeat"></i>
+                </div>
+              </div>
+
+              <div id="wave">
+                <span class="stroke"></span>
+                <span class="stroke"></span>
+                <span class="stroke"></span>
+                <span class="stroke"></span>
+                <span class="stroke"></span>
+                <span class="stroke"></span>
+                <span class="stroke"></span>
+              </div>
+            </div>
+          </div>
+        </section>
+        <section>
+          <h2>إعادة تقديم العمل</h2>
+          <p>
+            بعد مرور 22 عاماً على العرض الأول، قام أبناء منصور الرحباني بإعادة
+            تقديم المسرحية. مروان أخرج العمل، بينما شارك غدي وأسامة في التلحين
+            والتوزيع. تم استخدام تقنيات حديثة في التسجيل، وأسهم الفضاء المفتوح
+            في قلعة بيبلوس في إبراز الطابع التاريخي للعمل. الأزياء من تصميم غابي
+            أبي راشد، والدبكات من تصميم عبد الحليم كركلا.
+          </p>
+        </section>
+      </main>
+      <footer>
+        <p>جميع الحقوق محفوظة © ٢٠٢٤</p>
+      </footer>
+    </div>
     <script src="/src/js/music_player.js"></script>
   </body>
 </html>
