--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,5 +1,3 @@
-<!-- <script type="module" src="https://unpkg.com/@splinetool/viewer@1.9.26/build/spline-viewer.js"></script>
-<spline-viewer url="https://prod.spline.design/jI2Ygg0m7zeFldzy/scene.splinecode"></spline-viewer> -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -21,25 +19,6 @@
       rel="stylesheet"
     />
     <title>History of Web</title>
-
-    <!-- <script>
-      function toggleDropdown() {
-        document.getElementById("myDropdown").classList.toggle("show");
-      }
-
-      // Close the dropdown if the user clicks outside of it
-      window.onclick = function (event) {
-        if (!event.target.matches(".dropdown a")) {
-          var dropdowns = document.getElementsByClassName("dropdown-content");
-          for (var i = 0; i < dropdowns.length; i++) {
-            var openDropdown = dropdowns[i];
-            if (openDropdown.classList.contains("show")) {
-              openDropdown.classList.remove("show");
-            }
-          }
-        }
-      };
-    </script> -->
   </head>
   <body>
     <div id="loading-overlay">
@@ -77,7 +56,7 @@
               <i class="bx bx-chevron-down"></i>
             </a>
             <div class="dropdown-content show">
-              <a href="./extra.html">Research</a>
+              <a href="./research.html">Research</a>
               <a href="./arabic.html" target="_blank" rel="noopener noreferrer"
                 >Arabic Page</a
               >
@@ -97,18 +76,10 @@
           </li>
         </ul>
       </nav>
-      <!-- <button id="theme-toggle">
-        <i class="bx bx-sun" style="font-size: 30px"></i>
-      </button> -->
     </header>
     <div class="home">
       <div class="home-card">
         <h1 class="home-title">Explore the Evolution of The Web</h1>
-        <!-- <p class="home-text">
-          Dive into the fascinating timeline of the World Wide Web, tracing its
-          origins and milestones. Discover how web development has transformed
-          communication and information sharing across the globe.
-        </p> -->
       </div>
       <div id="sphere-container" class="sphere-container"></div>
     </div>
@@ -185,15 +156,10 @@
       </div>
       <div class="footer-bottom">
         <div>© Anthony Abisaid. All rights reserved.</div>
-        <!-- <div>
-          <a href="#">Privacy Policy</a> | <a href="#">Terms of Service</a> |
-          <a href="#">Cookies Settings</a>
-        </div> -->
       </div>
     </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script type="module" src="/src/js/sphere.js"></script>
-    <!-- <script type="module" src="/src/js/theme_picker.js"></script> -->
     <script type="module" src="/src/js/loading.js"></script>
   </body>
 </html>
