--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
             >
           </li>
         </ul>
+        <a href="https://cinlic.rf.gd">Cinlic</a>
       </nav>
     </header>
     <div class="home">
